src/objects/Causa_de_la_reclamacion__mdt.object
<CustomObject>
    <fields>
        <fullName>MTD_CAUSA_TXT_Causa_de_la_reclamacion__c</fullName>
        <label>Causa de la reclamación</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MTD_CAUSA_TXT_Naturaleza__c</fullName>
        <label>Naturaleza</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MTD_CAUSA_TXT_Reclamacion__c</fullName>
        <label>Reclamacion</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MTD_CAUSA_TXT_Tipologia__c</fullName>
        <label>Tipologia</label>
        <type>TextArea</type>
    </fields>
    <label>Causa de la reclamación</label>
    <pluralLabel>Causas de las reclamaciones</pluralLabel>
</CustomObject>